# mFP

./: .hgignore  3j.cc  3j.h  CMakeLists.txt  LinkDef.h  Makefile  README  bw.cc  bw.h  control.cc  control.h  controlExample.txt  dataEtaPi.txt  dataEtaPpi.txt  dataEtaPpi_eta_to_3pi.txt  draw.C  event.cc  event.h  fitInfo.cc  fitInfo.h  fitModel.cc  fitModel.h  gHist.h  likelihood.cc  likelihood.h  massDep.cc  massdep.C  moments.cc  myFit.cc  predict.cc  startingValue.h  wave.cc  wave.h
